Day-70/blue-green-manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-deployment
  namespace: blue-green
spec:
  replicas: 4
  selector:
    matchLabels:
      app: blue-green-deployment
  template:
    metadata:
      labels:
        app: blue-green-deployment
    spec:
      containers:
      - name: blue-green
        image: gauravhalnawar2705/blue-green-deployment:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
  strategy:
    blueGreen:
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: false
