Day-70/blue-green-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
  namespace: blue-green
spec:
  selector:
    app: blue-green-deployment
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
  namespace: blue-green
spec:
  selector:
    app: blue-green-deployment
  ports:
  - port: 5000
    targetPort: 5000
